@@ -3,13 +3,15 @@ Hash: SHA1
 
 AUX mcollectived.initd 611 RMD160 8c37234210005e1ad2705360f9b04e870b629011 SHA1 43337c8f059d8c77ca5323e9f09664d1b271b708 SHA256 ca676b85fe2e4a1e4acc64a8f06e67b12ea68982f17cf08f757d68dd633d0220
 DIST mcollective-0.4.5.tgz 167147 RMD160 ab0a96d4cb2d3adba8f18f09a6b5785ec2740efb SHA1 85bef77b04bdf535471495a3172a772e1f624892 SHA256 994c86cb555182f1183e001ff4dc5ce7bbf6457d077459d6c5fab0956ef774da
+DIST mcollective-0.4.6.tgz 182135 RMD160 d4f3914b4783a64d606a02f6ddf9c50a8313b359 SHA1 9062a32068d5ff1ca41d9f0aa9622995a5151359 SHA256 8664ccbe1b7f9319563ac02809ac4b2169c03ae1300aa492932614352160cfaa
 EBUILD mcollective-0.4.5.ebuild 1445 RMD160 8b9729195df11a5743c35ae59033061342ffa1a6 SHA1 744949a4d7fdfb0d9bb2b2573fc85c0c2dcc7276 SHA256 cbdf12fc54cc7457d25ddf1ab94630653067a289a0c1391d26a6db95fe8e9d39
-MISC ChangeLog 1166 RMD160 a854a3c323d574995e691b8df10cdaa9d0f43e0e SHA1 7d0b717621e0f24d4e1b73d8e83a4574b984c204 SHA256 fa8ae94e4619a72cbe3a6cc9800c3e38ce9ee9a262a4ad4170d92a2add2306b2
+EBUILD mcollective-0.4.6.ebuild 1440 RMD160 96e2ef4d4adc30f52c3e63ca7af4d0e15777ce20 SHA1 db51c910a244843c2e9af9e9be7d76e1a1f142ac SHA256 c24cb7c7a9a09fed14d88a8f6bc3d928f5b504d0b3f5a3cd86dd345d229a445a
+MISC ChangeLog 1311 RMD160 abdf68831ab469657a4d8947bbb85168f5fbe26e SHA1 6f429e81a7bcf95f334fbbc8f0298f71c75b5506 SHA256 3f08414d445f84741955d4877657a77e37e4b428e8b7fa782308c13a3a56cab4
 MISC metadata.xml 428 RMD160 feee94472e92ab507bdbdd678fa2ea8b02b65ac6 SHA1 c2b0057b0d86fe3e5cc93cbb3ed551410ca05d05 SHA256 16f1e90b1d2d4b13cd323983cde873dcc56bb25eade80030d21bc1815a158338
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iD8DBQFMEURiQW+hXSf0t0IRAq4uAKDsUSjbvgYNpf999ANBD+OiikwKSwCgnVgY
-hK68T35a7A0MceCb+8VJ8Rs=
-=b8H4
+iD8DBQFMFro4QW+hXSf0t0IRAnFGAJ4hwzGGja/PMOIumky0ILLH55y21gCgj8cN
+qiIQnp51Iv7snPN3eFJ+ZIA=
+=oS6w
 -----END PGP SIGNATURE-----
